[package]
name = "s2rs"
version = "0.2.10"
license = "MIT"
edition = "2021"
description = "An intuitive Rust -> Scratch API library"
repository = "https://github.com/userfriendanonymous/s2rs/"

[features]
time = ["dep:chrono"]
rss = ["time", "dep:feed-rs"]
html = ["dep:html_parser"]
web_socket = ["dep:tokio-tungstenite"]
stream = []
cookie = ["dep:basic-cookies"]
file = ["reqwest/multipart"]
# all = ["rss", "html", "web_socket", "stream", "bytes", "file"] # to be removed?

[dependencies]
s2rs-derive = "0.1.2"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.95"
tokio = "1.27.0"
url = "2.3.1"
serde = { version = "1.0.159", features = ["derive"] }
async-trait = "0.1.68"
html_parser = { version = "0.6.3", optional = true }
derivative = "2.2.0"
futures-util = "0.3.28"
tokio-tungstenite = { version = "0.18.0", optional = true }
feed-rs = { version = "1.3.0", optional = true }
chrono = { version = "0.4.24", optional = true }
bytes = { version = "1.4.0", optional = true }
basic-cookies = { version = "0.1.4", optional = true }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.2"
dotenv = "0.15.0"
